small changes to index & draw.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             crossorigin="anonymous"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="js/draw.js"></script>
-    <div class="container">
+    <div class="container" id="dashboard">
+      <div class="chart" id="chart1">
+      </div>
+    </div>
 
 </body>
 </html>
