--- a/vegalite_file.html
+++ b/vegalite_file.html
@@ -61,7 +61,8 @@
         "type": "circle",
         "opacity": 0.8,
         "stroke": "black",
-        "strokeWidth": 1
+        "strokeWidth": 1,
+        // 'tooltip':{"fiels": "data"}
       },
       "encoding":{
         "x": {
@@ -79,7 +80,8 @@
           "legend": {"title": "Number of Records Lost", "clipHeight": 30},
           "scale": {"range": [0, 10000]}
         },
-         "color": {"field": "METHOD OF LEAK", "type": "nominal", "legend": null}
+         "color": {"field": "METHOD OF LEAK", "type": "nominal", "legend": null},
+         'tooltip':{"field": "Entity", "type": "nominal"}
       }
     };
 
