--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>SI 649 Group Assignment</title>
-    <link rel="stylesheet" href="css/skeleton.css" />
-    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -14,7 +12,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="js/draw.js"></script>
     <div class="container" id="dashboard">
-      <div class="chart" id="chart1">
+      <div id="chart1">
       </div>
     </div>
 
